# Replit-Project-Manager

./: .replit  README.md  README_PARLANT.md  govinfo_client.py  indexing_system_integration_plan.md  package-lock.json  package.json  parlant_ai_integration_design.md  parlant_service.py  pyproject.toml  replit.md  search_integration_analysis.md  start-all-services.sh  test-task-sync.txt  test_parlant_service.py  tsconfig.json  ucc_fetcher.py  ucc_implementation_recommendations.md  ucc_indexer.py  ucc_processor.py  ucc_schema_design.md  ucc_storage_interface_design.md  uscode_indexer.py  uscode_processor.py
.agent/: tasks.json
.dart-reports/: cumulative-doc-id.json  dev-task-mappings.json  git-analysis-2025-09-14T22-39-00-267Z.json  git-analysis-2025-09-15T00-51-20-815Z.json  git-analysis-2025-09-15T01-01-37-232Z.json  git-analysis-2025-09-15T01-01-50-440Z.json  git-analysis-2025-09-15T01-01-50-448Z.json  git-analysis-2025-09-15T01-18-00-480Z.json  git-analysis-2025-09-15T01-18-00-500Z.json  git-analysis-2025-09-15T01-18-03-088Z.json  git-analysis-2025-09-15T01-19-01-553Z.json  git-analysis-2025-09-15T01-19-01-568Z.json  git-analysis-2025-09-15T01-19-04-156Z.json  git-analysis-2025-09-15T01-24-29-338Z.json  git-analysis-2025-09-15T01-24-29-364Z.json  git-analysis-2025-09-15T01-24-31-821Z.json  git-analysis-2025-09-15T01-24-50-996Z.json  git-analysis-2025-09-15T01-27-28-146Z.json  git-analysis-2025-09-15T01-27-28-170Z.json  git-analysis-2025-09-15T01-27-30-862Z.json  git-analysis-2025-09-15T01-29-33-220Z.json  git-analysis-2025-09-15T01-29-46-106Z.json  (+106 more)
server/: index.ts  (+7 more)
(+91 files in other folders)
