[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "parlant>=3.0.2",
    "pydantic>=2.11.9",
    "ratelimit>=2.2.1",
    "uvicorn>=0.32.1",
    "xmltodict>=1.0.0",
]
